--- a/style.css
+++ b/style.css
@@ -1,24 +1,35 @@
-*{
-    margin:0;
-    padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    background-color: #fff;
+body {
+  background-color: #fff;
 }
 
-input:active{
-
-
-
-    outline:none;
-    border-color:none;
+input:active {
+  outline: none;
+  border-color: none;
 }
 
-h2
+.card img {
+  width: 100%;
+  height: 50%;
+}
+h2 {
+  color: blue;
+  font-weight: bolder;
+}
 
-{
+button {
+  color: white;
+  background-color: black;
+}
 
-    color:blue;
-font-weight:bolder;
+img {
+  width: 50%;
+  height: 600px;
+}
+a {
+  color: black;
 }
